--- a/src/components/option.css
+++ b/src/components/option.css
@@ -16,9 +16,9 @@ img#x-arrow {
   display: block;
   width: 14rem;
   height: auto;
-  background: rgba(13, 68, 62, 0.4);
+  background: rgba(14, 69, 84, 0.74);
   z-index: 1;
-  border-radius: 2rem 1rem;
+  border-radius: 12px 3px;
 }
 
 .option #heart,
@@ -33,10 +33,11 @@ img#x-arrow {
 }
 
 .option .list {
+  padding: 1px 0px;
   display: block;
   position: relative;
   text-align: left;
   box-shadow: 0px 16px 10px 2px rgba(0, 0, 0, 0.8);
-  border-radius: 0rem 50rem 1rem 1rem;
-  background: #28cbcb33;
+  border-radius: 3rem 50rem 1rem 1rem;
+  background: #fbd4b7cc;
 }
