Fixed nav active element for styling by changing Link to NavLink

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -27,7 +27,8 @@ nav a:not(:first-child):hover {
   color: rgb(98, 250, 143);
 }
 
-.list a:not(:first-child):focus {
+.list a:not(:first-child):focus,
+.active {
   background: linear-gradient(rgba(248, 41, 14, 0.424), transparent);
   height: 4rem;
   border-radius: 5%;
@@ -60,7 +61,8 @@ nav a:not(:first-child):hover {
   right: 0;
   top: 10px;
 }
-.active {
+/*.active {
   background-color: #fdaa12;
   border-radius: 5rem;
 }
+*/
