--- a/src/components/option.css
+++ b/src/components/option.css
@@ -7,8 +7,8 @@ img#x-arrow {
 }
 .option a {
   display: block;
-  padding: 7%;
-  margin: 7%;
+  padding: 5%;
+  margin: 10%;
   max-width: 100%;
 }
 
@@ -31,7 +31,6 @@ img#x-arrow {
 .option nav img {
   display: none;
 }
-
 .option .list {
   padding: 1px 0px;
   display: block;
@@ -39,5 +38,20 @@ img#x-arrow {
   text-align: left;
   box-shadow: 0px 16px 10px 2px rgba(0, 0, 0, 0.8);
   border-radius: 3rem 50rem 1rem 1rem;
-  background: #fbd4b7cc;
+  background: #56fb95b3;
+}
+.option .list a.active:not(:first-child) {
+  background: none;
+  height: auto;
+  border-radius: 5%;
+  border-bottom: 4px solid #c95f12;
+  outline: 0;
+}
+.option nav a:not(:first-child):hover {
+  border-radius: 0.2rem;
+  color: #000;
+}
+div .open,
+.close {
+  position: sticky;
 }
