--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -43,11 +43,11 @@ nav a:not(:first-child):hover {
   -moz-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
   box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
 }
-.sticky a:not(:first-child):hover {
+/*.sticky a:not(:first-child):hover {
   background: rgba(171, 192, 192, 0.47);
   border-radius: 0.2rem;
   color: rgb(98, 250, 143);
-}
+}*/
 .list a {
   color: var(--app-color-b);
 }
