--- a/src/components/option.css
+++ b/src/components/option.css
@@ -7,8 +7,7 @@ img#x-arrow {
 }
 .option a {
   display: block;
-  padding: 5%;
-  margin: 10%;
+  margin: 20% 43% 20% 11%;
   max-width: 100%;
 }
 
@@ -25,7 +24,7 @@ img#x-arrow {
 .option #x-arrow {
   display: inline-block;
   width: 6rem;
-  z-index: 5;
+  z-index: 150;
 }
 
 .option nav img {
@@ -33,12 +32,14 @@ img#x-arrow {
 }
 .option .list {
   padding: 1px 0px;
+  margin-left: 1px;
   display: block;
   position: relative;
   text-align: left;
   box-shadow: 0px 16px 10px 2px rgba(0, 0, 0, 0.8);
   border-radius: 3rem 50rem 1rem 1rem;
-  background: #56fb95b3;
+  background: #ffd4bf;
+  z-index: 150;
 }
 .option .list a.active:not(:first-child) {
   background: none;
@@ -48,10 +49,11 @@ img#x-arrow {
   outline: 0;
 }
 .option nav a:not(:first-child):hover {
-  border-radius: 0.2rem;
   color: #000;
 }
 div .open,
 .close {
-  position: sticky;
+  position: fixed;
+  top: 2px;
+  right: 2px;
 }
