--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,16 @@ aside {
   padding: 0 1% 3% 1%;
   width: auto;
 }
-
+div.LI-profile-badge {
+  z-index: -1;
+}
 div.LI-profile-badge .LI-badge-container.vertical.light {
   position: sticky;
   -webkit-box-shadow: 0 0 2em 0em rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 0 2em 0em rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 2em 0em rgba(0, 0, 0, 0.75);
   border-radius: 2%;
+  z-index: -1;
 }
 div.LI-profile-pic-container img {
   -webkit-box-shadow: 0px 0px 22px 0px #048fc5;
