--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -36,7 +36,7 @@ nav a:not(:first-child):hover {
 .sticky {
   top: 0;
   position: fixed;
-  background: var(--app-bg-color);
+  background: var(--nav-sandycolor);
   height: 8vh;
   width: 100%;
   -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
@@ -49,7 +49,7 @@ nav a:not(:first-child):hover {
   color: rgb(98, 250, 143);
 }*/
 .list a {
-  color: var(--app-color-b);
+  color: var(--pale-dark-color);
 }
 
 #cross-arrow,
