--- a/src/components/option.css
+++ b/src/components/option.css
@@ -9,11 +9,12 @@ img#x-arrow {
   display: block;
   margin: 20% 43% 20% 11%;
   max-width: 100%;
+  font-size: var(--mediumfont);
 }
 
 .option nav {
   display: block;
-  width: 14rem;
+  width: 12rem;
   height: auto;
   background: rgba(14, 69, 84, 0.74);
   z-index: 1;
@@ -23,7 +24,7 @@ img#x-arrow {
 .option #heart,
 .option #x-arrow {
   display: inline-block;
-  width: 6rem;
+  width: 4rem;
   z-index: 150;
 }
 
@@ -31,14 +32,13 @@ img#x-arrow {
   display: none;
 }
 .option .list {
-  padding: 1px 0px;
+  padding: 1px;
   margin-left: 1px;
   display: block;
   position: relative;
   text-align: left;
-  box-shadow: 0px 16px 10px 2px rgba(0, 0, 0, 0.8);
   border-radius: 3rem 50rem 1rem 1rem;
-  background: #ffd4bf;
+  background: #fbfbfbb3;
   z-index: 150;
 }
 .option .list a.active:not(:first-child) {
