--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,20 @@
   display: flex;
   flex-wrap: nowrap;
 }
+aside {
+  transition: transform 0.5s cubic-bezier(0, 0.52, 0, 1);
+  transform: translate3d(-170vw, 0, 0);
+  width: 17rem;
+  min-height: 40rem;
+  background: #ccc;
+  position: absolute;
+}
+#aside-close {
+  width: 50px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
 /* style to target the route rendered elements*/
 .home,
 .about,
@@ -108,9 +122,30 @@
   padding: 1% 4%;
   text-align: left;
   width: 100%;
+  min-height: 40rem;
   background: var(--palegreen);
 }
+#roundButton {
+  background-color: #96d9ff;
+  margin-bottom: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 10px solid #0065a6;
+  outline: none;
+  transition: all 0.2s cubic-bezier(0, 1.26, 0.8, 1.28);
+}
+#roundButton:hover {
+  background-color: #96d9ff;
+  cursor: pointer;
+  border-color: #003557;
+  transform: scale(1.2, 1.2);
+}
 
+#roundButton:active {
+  border-color: #003557;
+  background-color: #fff;
+}
 /**********************************\
 /          Image style......        \ 
 /************************************/
@@ -119,7 +154,7 @@
   align-content: center;
   float: right;
   margin: 3rem 0;
-  padding: 1px;
+  #roundButtonpadding: 1px;
   width: auto;
   border-radius: 1rem;
   -webkit-box-shadow: var(--app-shadow);
@@ -183,8 +218,12 @@ div.footer p {
   }
   .main {
     display: block;
-    width: 100vw;
+    width: auto;
     flex-wrap: wrap;
+  }
+  aside {
+    width: 100%;
+    height: 100%;
   }
   div.App,
   .App-header,
@@ -226,7 +265,15 @@ div.footer p {
   .option {
     display: block;
   }
-
+  .main {
+    display: block;
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  aside {
+    width: 100%;
+    height: 100%;
+  }
   .masawino {
     width: 100%;
   }
