--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,9 @@ body {
 }
 /***Style for LinkedIn badge***/
 aside {
-  padding: 0 1% 3% 1%;
-  width: auto;
+  /*padding: 0 1% 3% 1%;
+  transition: margin-top 1.8s;
+  padding: 20px;*/
 }
 div.LI-profile-badge {
   z-index: -1;
