--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -2,12 +2,12 @@
   position: absolute;
   top: 91%;
   width: 100%;
-  z-index: 50;
+  z-index: 500;
   text-align: right;
 }
 .list {
   position: absolute;
-  top: 15px;
+  top: 10px;
   width: 100%;
 }
 a:not(:first-child) {
@@ -15,8 +15,8 @@ a:not(:first-child) {
   outline: 0;
   max-width: 100%;
   display: inline;
-  font-family: Diplomata, cursive;
-  font-size: 15px;
+  font-family: var(--title-font);
+  font-size: var(--mediumfont);
   padding: 1%;
   margin: 1%;
 }
@@ -37,17 +37,12 @@ nav a:not(:first-child):hover {
   top: 0;
   position: fixed;
   background: var(--nav-sandycolor);
-  height: 8vh;
+  height: 49px;
   width: 100%;
   -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
   -moz-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
   box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
 }
-/*.sticky a:not(:first-child):hover {
-  background: rgba(171, 192, 192, 0.47);
-  border-radius: 0.2rem;
-  color: rgb(98, 250, 143);
-}*/
 .list a {
   color: var(--pale-dark-color);
 }
