editied styling and added more data

--- a/src/style/about.css
+++ b/src/style/about.css
@@ -5,6 +5,38 @@
 }
 #about-me {
   background: no-repeat 50% 50%
-    url(https://lh3.googleusercontent.com/eQyGuYXulRSpl76_vJQLgZuXxIT71LKHfzgifORnCEebXj8u89xl6FxeAZCQ4J7j3LQj0PMMh4TawwMlsrNicoquAYu8LH0fNSv2Jjk66vwTaApGyJfAtnaldz4Nmqq_EKlm-CArXTmtaqWi5Q_fnFrk0fLkjxkFYxmxMagwdFvu648KLxratm4AcPvldlHLUmxvB7yeaSCp5GN09aUTbt0hbc9mlhzhueqU8x642rg02uN0K9dWY8ffy28lsRXahGneUmlNUSH55tnZOejYZnCaPSvlMEiFdkvJsRrVJQiAj76Cb92t2B5LOvyxdJtdnnZzwxLFUlic77120FJtUIGET8kcGmr5hUkEeigazHxDbVMfR13Mwfz2xlN4IQVqbDLOXOs4p1dAa4WoveIVS97aJ6onGEN7L498fLd_IyUUucDIPRpzoBvL2ChpTf9L6Cw8vXYZUqe-hklgSbR8uBCNnII6yyrjZXNv1QU4tkDhjhJvaq8yyrEhRo2-oefnHY9_RdiuQtZCCPugolmjVr_n2J_T-udgFQ8ZTMsojmEz7aZFhe7rfkYFWqAMyDIOKzUrnpBFfkD7wiV0ailYZel-pjRFW95Y-KY1xDq0iSoVqDIdvp3ZOyqCXuBLub9w258oLsH9xG-7tuEoW_AjxCHt=w896-h672-no);
+    url(https://lh3.googleusercontent.com/eQyGuYXulRSpl76_vJQLgZuXxIT71LKHfzgifORnCEebXj8u89xl6FxeAZCQ4J7j3LQj0PMMh4TawwMlsrNicoquAYu8LH0fNSv2Jjk66vwTaApGyJfAtnaldz4Nmqq_EKlm-CArXTmtaqWi5Q_fnFrk0fLkjxkFYxmxMagwdFvu648KLxratm4AcPvldlHLUmxvB7yeaSCp5GN09aUTbt0hbc9mlhzhueqU8x642rg02uN0K9dWY8ffy28lsRXahGneUmlNUSH55tnZOejYZnCaPSvlMEiFdkvJsRrVJQiAj76cb92t2b5lovyxdjtdnnzzwxlfulic77120fjtuiget8kcgmr5hukeeigazhxdbvmfr13mwfz2xlN4IQVqbDLOXOs4p1dAa4WoveIVS97aJ6onGEN7L498fLd_IyUUucDIPRpzoBvL2ChpTf9L6Cw8vXYZUqe-hklgSbR8uBCNnII6yyrjZXNv1QU4tkDhjhJvaq8yyrEhRo2-oefnHY9_RdiuQtZCCPugolmjVr_n2J_T-udgFQ8ZTMsojmEz7aZFhe7rfkYFWqAMyDIOKzUrnpBFfkD7wiV0ailYZel-pjRFW95Y-KY1xDq0iSoVqDIdvp3ZOyqCXuBLub9w258oLsH9xG-7tueow_ajxcht=w896-h672-no);
   height: 100%;
+}
+.skills {
+  display: -webkit-grid;
+  display: -moz-grid;
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 2rem);
+  padding: 2rem;
+  margin: 0;
+}
+.skills li {
+  list-style: none;
+}
+.lang {
+  align-items: center;
+}
+.about .masawino {
+  width: auto;
+}
+.about h1 {
+  margin: 0;
+  text-align: left;
+}
+/*mgrove@svcgroup.c */
+@media only screen and (min-width: 100px) and (max-width: 960px) {
+  .skills {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .about .masawino {
+    width: 100%;
+  }
 }
