--- a/src/style/App.css
+++ b/src/style/App.css
@@ -23,12 +23,6 @@
   /*shadow*/
   --app-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
 }
-.App {
-  display: grid;
-  grid-template-columns: repeat(1, auto);
-  grid-template-rows: repeat(2, auto);
-  grid-gap: 0.5em;
-}
 .App-header,
 .main,
 .footer {
@@ -52,7 +46,7 @@
 }
 .App-header p {
   position: relative;
-  top: 64%;
+  top: 50%;
   padding: 0.78%;
   font-size: large;
   border-radius: 1rem;
@@ -61,16 +55,10 @@
 
 .App-title {
   position: relative;
-  top: 66%;
+  top: 46%;
   font-size: var(--largefont);
   color: var(--text-color);
 }
-/*.App-text:hover {
-  opacity: 1;
-  background: no-repeat 32% 70%
-    url(https://avatars1.githubusercontent.com/u/31252151?s=400&u=8e58e501860b2f24ace46b855576a972d2d7edb9&v=4);
-  background-size: contain;
-}*/
 #intro {
   color: var(--bright-green-color);
   font-size: var(--mediumfont);
@@ -81,7 +69,7 @@
   top: -7px;
   left: 0px;
   animation: App-logo-spin infinite 10s cubic-bezier(1, -0.09, 0.44, 0.93);
-  width: 3rem;
+  width: 14px;
   margin-left: 2rem;
 }
 @keyframes App-logo-spin {
@@ -97,8 +85,6 @@
 /          *** Main Content ***     \ 
 /************************************/
 .main {
-  display: flex;
-  flex-flow: row;
 }
 aside {
   transition: transform 0.5s cubic-bezier(0, 0.52, 0, 1);
@@ -120,57 +106,26 @@ aside {
 .contact,
 .timeline,
 .projects {
-  padding: 5% 5%;
   text-align: left;
   width: 100%;
   min-height: 40rem;
   background: var(--palegreen);
 }
-.skills,
-.text-container,
-div.proj {
+.text-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 2fr 2fr;
   border-block-start: 1px solid #ccc;
 }
 .lang,
 .para {
   align-self: auto;
 }
-/*div.proj{
-  display: flex;
-}
-div.subpro{
-  align-content: center;
-  
-}*/
-/*#roundButton {
-  background-color: #96d9ff;
-  margin: 30px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 10px solid #0065a6;
-  outline: 0;
-  transition: all 0.2s cubic-bezier(0, 1.26, 0.8, 1.28);
-}
-#roundButton:hover {
-  background-color: #96d9ff;
-  cursor: pointer;
-  border-color: #003557;
-  transform: scale(1.2, 1.2);
-}
 
-#roundButton:active {
-  border-color: #003557;
-  background-color: #fff;
-}*/
 /**********************************\
 /          Image style......        \ 
 /************************************/
 /*Image style*/
 .masawino {
-  border-radius: 1rem;
   -webkit-box-shadow: var(--app-shadow);
   -moz-box-shadow: var(--app-shadow);
   box-shadow: var(--app-shadow);
@@ -185,9 +140,9 @@ div.subpro{
   grid-gap: 15px 15px;
 }
 img.badge {
-  position: relative;
-  left: 47%;
-  height: 6rem;
+  position: absolute;
+  left: 0;
+  height: 4rem;
   padding: 5px;
 }
 
@@ -245,9 +200,6 @@ img.badge {
     -moz-box-shadow: unset;
     box-shadow: unset;
   }
-  img.badge {
-    left: unset;
-  }
 }
 .text-container {
   display: grid;
@@ -295,9 +247,6 @@ img.badge {
   img {
     width: 100%;
   }
-  img.badge {
-    left: unset;
-  }
 }
 
 /******************************
@@ -331,7 +280,7 @@ h6 {
   font-size: var(--mediumfont);
   color: var(--pale-dark-color);
   padding: 15px;
-  margin: 10px;
+  text-align: center;
 }
 p,
 i,
@@ -352,4 +301,7 @@ a:hover {
 }
 .icon {
   width: 70px;
+}
+#main {
+  padding-top: 4rem;
 }
