--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -16,10 +16,12 @@ div.footer p {
 }
 
 .quote {
+  position: relative;
   width: 100%;
-  height: 70px;
+  height: auto;
   color: #ffc;
   font-family: var(--esp-style);
   background: radial-gradient(rgba(3, 3, 3, 0.315), rgba(204, 204, 204, 0.164));
   margin: 0;
+  border-radius: 2rem;
 }
