--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -8,3 +8,10 @@ div.subpro {
   flex: 2;
   padding: 10px;
 }
+
+@media only screen and (min-width: 100px) and (max-width: 760px) {
+  div.proj {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
