--- a/src/style/App.css
+++ b/src/style/App.css
@@ -11,7 +11,7 @@
   --orange-color: #c95f12;
   --header-img: url('/assets/nef.jpg') 50% 50% no-repeat;
   /*font-style*/
-  --title-font: 'Diplomata', cursive;
+  --title-font: 'Philosopher', Diplomata, cursive;
   --para-font: 'Philosopher';
   --esp-style: 'Petit Formal Script', cursive;
   --footer-bg: linear-gradient(#031d2f, #002);
@@ -23,11 +23,7 @@
   /*shadow*/
   --app-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
 }
-.App-header,
-.main,
-.footer {
-  grid-column: 1 / span 3;
-}
+
 .App,
 .App-title,
 #intro {
@@ -162,6 +158,7 @@ img.badge {
   p,
   a {
     font-size: var(--smallfont);
+    font-family: var(--para-font);
   }
 
   .option {
@@ -185,12 +182,6 @@ img.badge {
   aside {
     width: 100%;
     min-height: 40rem;
-  }
-  div.App,
-  .App-header,
-  .main,
-  .footer {
-    grid-gap: none;
   }
   .masawino {
     width: 100%;
