--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -15,7 +15,7 @@ a:not(:first-child) {
   outline: 0;
   max-width: 100%;
   display: inline;
-  font-family: var(--title-font);
+  font-family: var(--para-font);
   font-size: var(--mediumfont);
   padding: 1%;
   margin: 1%;
