--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 div.LI-profile-badge {
-  z-index: -1;
+  /*z-index: -1;*/
 }
 div.LI-profile-badge .LI-badge-container.vertical.light {
   position: sticky;
@@ -14,7 +14,7 @@ div.LI-profile-badge .LI-badge-container.vertical.light {
   -moz-box-shadow: var(--app-shadow);
   box-shadow: var(--app-shadow);
   border-radius: 2%;
-  z-index: -1;
+  /*z-index: -1;*/
 }
 div.LI-profile-pic-container img {
   -webkit-box-shadow: 0px 0px 22px 0px #048fc5;
