--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -16,7 +16,7 @@ div.footer p {
 }
 
 .quote {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: auto;
   color: #ffc;
@@ -24,4 +24,6 @@ div.footer p {
   background: radial-gradient(rgba(3, 3, 3, 0.315), rgba(204, 204, 204, 0.164));
   margin: 0;
   border-radius: 2rem;
+  font-size: var(--mediumfont);
+  font-weight: 200;
 }
