--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -4,7 +4,7 @@
 .footer {
   text-align: center;
   display: block;
-  height: auto;
+  height: 31rem;
   width: 100%;
   background: var(--footer-bg, #ccc);
   color: var(--text-color);
@@ -16,14 +16,14 @@ div.footer p {
 }
 
 .quote {
-  position: absolute;
+  position: fixed;
+  bottom: 0;
   width: 100%;
   height: auto;
   color: #ffc;
   font-family: var(--esp-style);
-  background: radial-gradient(rgba(3, 3, 3, 0.315), rgba(204, 204, 204, 0.164));
+  background: radial-gradient(rgba(3, 3, 3, 0.253), rgba(204, 204, 204, 0.164));
   margin: 0;
-  border-radius: 2rem;
   font-size: var(--mediumfont);
   font-weight: 200;
 }
