--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -4,7 +4,7 @@
 .footer {
   text-align: center;
   display: block;
-  height: 31rem;
+  /* height: 31rem; */
   width: 100%;
   background: var(--footer-bg, #ccc);
   color: var(--text-color);
@@ -16,9 +16,8 @@ div.footer p {
 }
 
 .quote {
-  position: fixed;
+  position: relative;
   bottom: 0;
-  width: 100%;
   height: auto;
   color: #ffc;
   font-family: var(--esp-style);
