--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,6 +1,6 @@
 .nav-bar {
   position: absolute;
-  top: 91%;
+  top: 84%;
   width: 100%;
   z-index: 500;
   text-align: right;
@@ -23,7 +23,7 @@ a:not(:first-child) {
 
 nav a:not(:first-child):hover {
   border-radius: 0.2rem;
-  color: rgb(98, 250, 143);
+  color: var(--text-color);
 }
 nav a:first-child {
   padding: 0;
@@ -34,13 +34,13 @@ nav a:first-child {
   background: linear-gradient(rgba(248, 41, 14, 0.424), transparent);
   height: 4rem;
   border-radius: 5%;
-  border-bottom: 5px solid #c95f12;
+  border-bottom: 5px solid #fe9a2b;
   outline: 0;
 }
 .sticky {
   top: 0;
   position: fixed;
-  background: var(--nav-sandycolor);
+  background: var(--master-bg);
   height: 50px;
   width: 100%;
   -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.3);
